--- a/labs/lab2/login.html
+++ b/labs/lab2/login.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+<center>
+<img src="ibulogo.jpg" width="90" height="50">
+<h3>International Burch University</h3>
+</center>
 </head>
 <body>
     <center>
@@ -14,9 +17,9 @@
 
 <h4>Password</h4>
 <input type="password" id="password" name="password" placeholder="Enter your password"><br><br>
-<p1>Don't have an account?</p1><br>
-<p2>Forgot your password?</p2><br><br>
-<input type="submit" value="SUBMIT" ><br><br>
+<p1>Don't have an account?</p1><br><a href="http://127.0.0.1:5500/labs/lab2/registrationform.html">Register NOW</a><br><br>
+<p2>Forgot your password?</p2> <a href="http://127.0.0.1:5500/labs/lab2/Forgot_password.html">Click HERE</a><br><br>
+<button id="submit" onclick="window.location.href='http://127.0.0.1:5500/labs/lab2/home_page.html'"><b>SUBMIT</b></button><br><br>
 </center>
 </body>    
 </html> 
