first project commit-Recipe Book

--- a/PROJECT_I/html_code.html
+++ b/PROJECT_I/html_code.html
@@ -47,7 +47,7 @@
 </ul>
     <p>Enjoy this hearty meal with a sprinkle of Parmesan cheese on top!</p><br><br><br>
     </div>
-    <!-- Repeat similar blocks for other recipes -->
+    <!-- I will repeat similar blocks for other recipes later on -->
 </section>
 <section id="addRecipe">
 <h2>Add Your Recipe</h2>
