--- a/labs/lab2/Forgot_password.html
+++ b/labs/lab2/Forgot_password.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 <center>
 <img src="ibulogo.jpg" width="90" height="50">
 <h3>International Burch University</h3>
@@ -15,7 +20,7 @@
         <p1><b>New password</b></p1><br>
         <input type="password" placeholder="Enter your password"><br><br>
         <input type="password" placeholder="Repeat the password"><br><br>
-        <button id="createPasswordButton" onclick="window.location.href='http://127.0.0.1:5500/labs/lab2/login.html'">Create New Password</button>
+        <a href="./home_page.html" class="submit">Create new password</a>
 
     </form></center>
 </div>
