--- a/labs/lab2/home_page.html
+++ b/labs/lab2/home_page.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 <center>
 <img src="ibulogo.jpg" width="500" height="160">
-<h1 style="color: blue;">Welcome back dear student!</h1>
 </center>
 </head>
 <center>
-<h2 style="font-weight: normal">Registered courses:</h2>
-
     <table border="1">
-        <tr>
-            <th style="font-weight: bold;">Course code</th>
-            <th style="font-weight: bold;">Course name</th>
-            <th style="font-weight: bold;">ETCS</th>
-        </tr>
+        <th>Course code</th>
+        <th>Course name</th>
+        <th>ETCS</th>
         <tr>
             <td>FENMS 035</td>
             <td>Foundations of Frontend Web Development</td>
