--- a/labs/lab2/login.html
+++ b/labs/lab2/login.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 <center>
 <img src="ibulogo.jpg" width="90" height="50">
 <h3>International Burch University</h3>
@@ -17,9 +21,10 @@
 
 <h4>Password</h4>
 <input type="password" id="password" name="password" placeholder="Enter your password"><br><br>
-<p1>Don't have an account?</p1><br><a href="http://127.0.0.1:5500/labs/lab2/registrationform.html">Register NOW</a><br><br>
-<p2>Forgot your password?</p2> <a href="http://127.0.0.1:5500/labs/lab2/Forgot_password.html">Click HERE</a><br><br>
-<button id="submit" onclick="window.location.href='http://127.0.0.1:5500/labs/lab2/home_page.html'"><b>SUBMIT</b></button><br><br>
+<p1>Don't have an account?</p1><br><a href="./registrationform.html">Register NOW</a><br><br>
+<p2>Forgot your password?</p2> <a href="./Forgot_password.html">Click HERE</a><br><br>
+<!--<button id="submit" onclick="window.location.href='./registrationform.html'"><b>SUBMIT</b></button><br><br> -->
+<a href="./home_page.html" class="submit">SUBMIT</a>
 </center>
 </body>    
 </html> 
