--- a/labs/lab2/registrationform.html
+++ b/labs/lab2/registrationform.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>  
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 <center>
     <img src="ibulogo.jpg" width="90" height="50">
     <h3>International Burch University</h3>
@@ -12,10 +16,10 @@
     <h1>REGISTRATION FORM</h1>
 <p1><pre>Firstname:                     Lastname:</pre></p1>
 <input id=firstname name="firstname" placeholder="Enter your first name" style="margin-right: 38px;"> <input type=lastname id=lastname name="lastname" placeholder="Enter your lastname"><br><br>
-<label style="margin-right: 144px;">Username: </label><input placeholder=""><br><br>
-<label style="margin-right: 144px;">Password: </label><input placeholder=""><br><br>
-<label style="margin-right: 144px;">Date of birth: </label><input type="date"><br><br>
-<label style="margin-right: 144px;">Place of birth: </label><input placeholder=""><br>
+<label>Username: </label><input placeholder=""><br><br>
+<label >Password: </label><input placeholder=""><br><br>
+<label >Date of birth: </label><input type="date"><br><br>
+<label >Place of birth: </label><input placeholder=""><br>
 <br>
 <label for="gender">Gender:</label>
     <div id="gender-options">
@@ -26,13 +30,15 @@
         <input type="radio" id="other" name="gender" value="Other">
         <label for="other">Other</label>
     </div>
-<label style="margin-right: 144px;">Email: </label><input placeholder=""><br><br>
-<label style="margin-right: 144px;">Phone: </label><input placeholder=""><br><br>
-<label style="margin-right: 144px;">Hair color: </label><input type="color" placeholder=""><br><br>
-<label style="margin-right: 315px;">Notes: <br>
+<label >Email: </label><input placeholder=""><br><br>
+<label >Phone: </label><input placeholder=""><br><br>
+<label >Hair color: </label><input type="color" placeholder=""><br><br>
+<label >Notes: <br>
 </label><textarea rows="4" cols="50" placeholder=""></textarea><br><br>
 <input  type="checkbox"><label>Receive notifications</label><br>
-<input style="margin-right: -339px" type="submit" value="Register">
+<button  type="submit" value="Register">Register
+</button>
+
 </center>
 </body>    
 </html> 
