--- a/PROJECT_I/html/errorpage.html
+++ b/PROJECT_I/html/errorpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Book || Starter</title>
+    <title>Error page</title>
     <link rel="shortcut icon" href="./assets/weblogo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/normalize.css" />
     <link
@@ -30,6 +30,7 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
+         
           <li class="nav-item">
             <a class="nav-link" href="recipes.html">Recipes</a>
           </li>
@@ -45,62 +46,10 @@
     </div>
   </nav>
    <!--main part-->
-   <main class="page">
-    <section class="contact-container">
-      <article class="contact-info">
-        <h3>Want to get in touch?</h3>
-        <p>We'd love to hear from you! Whether you have a question about a recipe, want to collaborate, or simply want to say hello, feel free to reach out to us using the contact form below.</p>
-        <p>Contact Form
-          Please fill out the form below, and we'll get back to you as soon as possible.
-          </p>
-      </article>
-      <article>
-        <form class="form contact-form">
-          <!--single form row-->
-        <div class="form-row">
-          <label for="name" class="form-label">Your name</label>
-        <input type="text" name="name" id="name"class="form-input"/>
-        </div>
-        <!--single form row-->
-        <div class="form-row">
-          <label for="email" class="form-label">Your Email</label>
-        <input type="text" name="email" id="email"class="form-input"/>
-        </div>
-        <div class="form-row">
-          <label for="message" class="form-label">Message</label>
-        <textarea name="message" id="message" class="form-textarea"></textarea>
-        </div>
-        <button type="submit" class="btn btn-block">Submit</button>
-      </form>
-      </article>
-    </section>
-    <section class="featured-recipes">
-      <h5 class="featured-title">~Featured recipes~</h5>
-      <!--recipes list-->
-    <div class="recipes-list">
-
-     <!--single recipe--> 
-    <a href="meatballs.html" class="recipe">
-     <img src="/assets/meatballs.webp" alt="Swedish meatballs" class="img recipe-img"/>
-     <h5>Swedish meatballs</h5>
-     <p>Prep : 15min | Cook : 30min</p>
-     </a>
-
-     <!--single recipe--> 
-    <a href="sushi.html" class="recipe">
-     <img src="/assets/sushi.jpg" alt="California rolls" class="img recipe-img"/>
-     <h5>Sushi ~ California rolls</h5>
-     <p>Prep : 25min | Assemble : 15min</p>
-     </a>
-
-     <!--single recipe--> 
-    <a href="veganbowl.html" class="recipe">
-     <img src="/assets/veganbuddhabowl.jpg" alt="Vegan bowl" class="img recipe-img"/>
-     <h5>Vegan Buddha Bowl</h5>
-     <p>Prep : 20min | Cook : 15min</p>
-     </a>
-    </div>
-
+   <main class="page error-page">
+    <section>
+      <h1>404</h1>
+      <h3>page not found</h3>
     </section>
    </main>
 
@@ -111,5 +60,6 @@
       Recipe Book </span> Built by Azra Arnautović
     </p>
    </footer>
+   
 </body>
 </html>
