--- a/PROJECT_I/html/tag-template.html
+++ b/PROJECT_I/html/tag-template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Book || Starter</title>
+    <title>Tags</title>
     <link rel="shortcut icon" href="./assets/weblogo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/normalize.css" />
     <link
@@ -44,68 +44,65 @@
       </div>
     </div>
   </nav>
-   <!--main part-->
-   <main class="page">
-    <section class="contact-container">
-      <article class="contact-info">
-        <h3>Want to get in touch?</h3>
-        <p>We'd love to hear from you! Whether you have a question about a recipe, want to collaborate, or simply want to say hello, feel free to reach out to us using the contact form below.</p>
-        <p>Contact Form
-          Please fill out the form below, and we'll get back to you as soon as possible.
-          </p>
-      </article>
-      <article>
-        <form class="form contact-form">
-          <!--single form row-->
-        <div class="form-row">
-          <label for="name" class="form-label">Your name</label>
-        <input type="text" name="name" id="name"class="form-input"/>
-        </div>
-        <!--single form row-->
-        <div class="form-row">
-          <label for="email" class="form-label">Your Email</label>
-        <input type="text" name="email" id="email"class="form-input"/>
-        </div>
-        <div class="form-row">
-          <label for="message" class="form-label">Message</label>
-        <textarea name="message" id="message" class="form-textarea"></textarea>
-        </div>
-        <button type="submit" class="btn btn-block">Submit</button>
-      </form>
-      </article>
-    </section>
-    <section class="featured-recipes">
-      <h5 class="featured-title">~Featured recipes~</h5>
-      <!--recipes list-->
+  <main class="page">
+    <div>
+        <h4>Tags</h4>
+        <!--recipes list-->
     <div class="recipes-list">
-
-     <!--single recipe--> 
-    <a href="meatballs.html" class="recipe">
-     <img src="/assets/meatballs.webp" alt="Swedish meatballs" class="img recipe-img"/>
-     <h5>Swedish meatballs</h5>
-     <p>Prep : 15min | Cook : 30min</p>
-     </a>
-
-     <!--single recipe--> 
-    <a href="sushi.html" class="recipe">
-     <img src="/assets/sushi.jpg" alt="California rolls" class="img recipe-img"/>
-     <h5>Sushi ~ California rolls</h5>
-     <p>Prep : 25min | Assemble : 15min</p>
-     </a>
-
-     <!--single recipe--> 
-    <a href="veganbowl.html" class="recipe">
-     <img src="/assets/veganbuddhabowl.jpg" alt="Vegan bowl" class="img recipe-img"/>
-     <h5>Vegan Buddha Bowl</h5>
-     <p>Prep : 20min | Cook : 15min</p>
-     </a>
+        <!--single recipe--> 
+        <a href="buns-recipe.html" class="recipe">
+        <img src="/assets/buns.webp" alt="Bread buns" class="img recipe-img"/>
+        <h5>Bread buns</h5>
+        <p>Prep : 35min | Cook : 15min</p>
+        </a>
+   
+        <!--single recipe--> 
+        <a href="spaghetti.html" class="recipe">
+         <img src="/assets/pasta.jpg" alt="pasta" class="img recipe-img"/>
+         <h5>Spaghetti Bolognese</h5>
+         <p>Prep : 15min | Cook : 30min</p>
+         </a>
+   
+         <!--single recipe--> 
+        <a href="bananabread.html" class="recipe">
+         <img src="/assets/Bananabread.webp" alt="Banana bread" class="img recipe-img"/>
+         <h5>Banana bread</h5>
+         <p>Prep : 10min | Cook : 1hr</p>
+         </a>
+   
+         <!--single recipe--> 
+        <a href="meatballs.html" class="recipe">
+         <img src="/assets/meatballs.webp" alt="Swedish meatballs" class="img recipe-img"/>
+         <h5>Swedish meatballs</h5>
+         <p>Prep : 15min | Cook : 30min</p>
+         </a>
+   
+         <!--single recipe--> 
+        <a href="sushi.html" class="recipe">
+         <img src="/assets/sushi.jpg" alt="California rolls" class="img recipe-img"/>
+         <h5>Sushi ~ California rolls</h5>
+         <p>Prep : 25min | Assemble : 15min</p>
+         </a>
+   
+         <!--single recipe--> 
+        <a href="veganbowl.html" class="recipe">
+         <img src="/assets/veganbuddhabowl.jpg" alt="Vegan bowl" class="img recipe-img"/>
+         <h5>Vegan Buddha Bowl</h5>
+         <p>Prep : 20min | Cook : 15min</p>
+         </a>
+   
+         <!--single recipe--> 
+        <a href="oatmeal.html" class="recipe">
+         <img src="/assets/oatmeal.jpg" alt="Oatmeal" class="img recipe-img"/>
+         <h5>Oatmeal</h5>
+         <p>Prep : 5min | Cook : 5min</p>
+         </a>
+   
+       </div>
     </div>
-
-    </section>
-   </main>
-
-   <!--footer-->
-   <footer class="page-footer">
+  </main>
+  <!--footer-->
+  <footer class="page-footer">
     <p>&copy; <span id="date">2024</span>
     <span class="footer-logo">
       Recipe Book </span> Built by Azra Arnautović
