--- a/PROJECT_I/html/index.html
+++ b/PROJECT_I/html/index.html
@@ -17,6 +17,11 @@
       
 </head>
 <body>
+
+  <!--theme switcher-->
+  <input type="checkbox" id="themeSwitch" name="theme-switch" class="theme-switch__input" />
+	<label for="themeSwitch" class="theme-switch__label">
+	</label>
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
       <a href="index.html">
@@ -47,6 +52,8 @@
       </div>
     </div>
   </nav>
+
+
    <!--main part-->
    <main class="page">
     <header class="hero">
