push of the week

--- a/PROJECT_I_II/html/errorpage.html
+++ b/PROJECT_I_II/html/errorpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error page</title>
-    <link rel="shortcut icon" href="./assets/weblogo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/images/weblogo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/normalize.css" />
     <link
       rel="stylesheet"
@@ -16,8 +16,8 @@
 <body>
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
-      <a href="index.html">
-        <img src="/assets/weblogo.png" id="navbar-brand" class="navbar-brand" alt="Website Logo">
+      <a href="home.html">
+        <img src="/assets/images/weblogo.png" id="navbar-brand" class="navbar-brand" alt="Website Logo">
     </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
