--- a/PROJECT_I_II/html/about.html
+++ b/PROJECT_I_II/html/about.html
@@ -1,47 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Book || Starter</title>
-    <link rel="shortcut icon" href="./assets/weblogo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-      <link rel="stylesheet" href="/css/main.css" />
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
-      <a href="index.html">
-        <img src="/assets/weblogo.png" id="navbar-brand" class="navbar-brand" alt="Website Logo">
-    </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="recipes.html">Recipes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search for a recipe" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+
    <!--main part-->
    <main class="page">
     <section class="about-page">
@@ -52,9 +9,9 @@
             <p>Our cookbook is more than just a collection of recipes; it's a celebration of culture, tradition, and innovation. From classic comfort foods to daring culinary experiments, we've curated a diverse selection to suit every palate and occasion.</p>
             <p>Whether you're a seasoned chef looking to expand your repertoire or a kitchen novice eager to explore the joys of cooking, our webpage offers something for everyone. Each recipe is meticulously crafted with detailed instructions and helpful tips, ensuring that even the most intricate dishes are within reach.</p>
             <p>Join us in the kitchen and unleash your inner chef. Let's turn ordinary ingredients into extraordinary meals, one recipe at a time. Get ready to indulge your senses and ignite your passion for cooking with our recipe book webpage. Happy cooking!</p>
-        <a href="contact.html" class="btn">Contact</a>
+        <a href="#contact" class="btn">Contact</a>
         </article>
-        <img src="/assets/aboutpage.jpg" alt="cooking with love" class="img about-img">
+        <img src="/assets/images/aboutpage.jpg" alt="cooking with love" class="img about-img">
       </section>
       <section class="featured-recipes">
         <h5 class="featured-title">~Featured recipes~</h5>
@@ -62,22 +19,22 @@
       <div class="recipes-list">
 
        <!--single recipe--> 
-      <a href="meatballs.html" class="recipe">
-       <img src="/assets/meatballs.webp" alt="Swedish meatballs" class="img recipe-img"/>
+      <a href="#meatballs" class="recipe">
+       <img src="/assets/images/meatballs.webp" alt="Swedish meatballs" class="img recipe-img"/>
        <h5>Swedish meatballs</h5>
        <p>Prep : 15min | Cook : 30min</p>
        </a>
  
        <!--single recipe--> 
-      <a href="sushi.html" class="recipe">
-       <img src="/assets/sushi.jpg" alt="California rolls" class="img recipe-img"/>
+      <a href="#sushi" class="recipe">
+       <img src="/assets/images/sushi.jpg" alt="California rolls" class="img recipe-img"/>
        <h5>Sushi ~ California rolls</h5>
        <p>Prep : 25min | Assemble : 15min</p>
        </a>
  
        <!--single recipe--> 
-      <a href="veganbowl.html" class="recipe">
-       <img src="/assets/veganbuddhabowl.jpg" alt="Vegan bowl" class="img recipe-img"/>
+      <a href="#veganbowl" class="recipe">
+       <img src="/assets/images/veganbuddhabowl.jpg" alt="Vegan bowl" class="img recipe-img"/>
        <h5>Vegan Buddha Bowl</h5>
        <p>Prep : 20min | Cook : 15min</p>
        </a>
@@ -87,13 +44,4 @@
     </section>
    </main>
 
-   <!--footer-->
-   <footer class="page-footer">
-    <p>&copy; <span id="date">2024</span>
-    <span class="footer-logo">
-      Recipe Book </span> Built by Azra Arnautović
-    </p>
-   </footer>
-  
-</body>
-</html>
+   
