--- a/PROJECT_I_II/html/contact.html
+++ b/PROJECT_I_II/html/contact.html
@@ -1,58 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Book || Starter</title>
-    <link rel="shortcut icon" href="./assets/weblogo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-      <link rel="stylesheet" href="/css/main.css" />
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-      <!-- jQuery -->
-      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-      <!-- jQuery Validator -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"></script>
-      <!-- jQuery BlockUI -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script>
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
-      <a href="index.html">
-        <img src="/assets/weblogo.png" id="navbar-brand" class="navbar-brand" alt="Website Logo">
-    </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="recipes.html">Recipes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search for a recipe" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-   <!--main part-->
-   <main class="page">
+
     <section class="contact-container">
       <article class="contact-info">
         <h3>Want to get in touch?</h3>
@@ -62,7 +8,7 @@
           </p>
       </article>
       <article>
-        <form class="form contact-form" id="contactForm">
+        <form class="form contact-form" id="contactForm" action="#">
           <!-- Single form row for name -->
           <div class="form-row">
             <label for="name" class="form-label">Your name</label>
@@ -98,41 +44,32 @@
     <div class="recipes-list">
 
      <!--single recipe--> 
-    <a href="meatballs.html" class="recipe">
-     <img src="/assets/meatballs.webp" alt="Swedish meatballs" class="img recipe-img"/>
+    <a href="#meatballs" class="recipe" onclick="openModal('/assets/images/meatballs.webp')">
+     <img src="/assets/images/meatballs.webp" alt="Swedish meatballs" class="img recipe-img"/>
      <h5>Swedish meatballs</h5>
      <p>Prep : 15min | Cook : 30min</p>
      </a>
 
      <!--single recipe--> 
-    <a href="sushi.html" class="recipe">
-     <img src="/assets/sushi.jpg" alt="California rolls" class="img recipe-img"/>
+    <a href="#sushi" class="recipe" onclick="openModal('/assets/images/meatballs.webp')">
+     <img src="/assets/images/sushi.jpg" alt="California rolls" class="img recipe-img"/>
      <h5>Sushi ~ California rolls</h5>
      <p>Prep : 25min | Assemble : 15min</p>
      </a>
+     <img width="200" height="20" src="/assets/images/veganbuddhabowl.jpg" style="display:block; margin:10px;" alt="Vegan bowl" class="img recipe-img" id="vegan" onclick="openModal('/assets/images/meatballs.webp')"/>
 
      <!--single recipe--> 
-    <a href="veganbowl.html" class="recipe">
-     <img src="/assets/veganbuddhabowl.jpg" alt="Vegan bowl" class="img recipe-img"/>
+     <a href="#veganbowl" class="recipe" >
+
      <h5>Vegan Buddha Bowl</h5>
      <p>Prep : 20min | Cook : 15min</p>
      </a>
     </div>
-
+<!-- Modal -->
+<div id="modal" class="modal" onclick="closeModal()">
+  <span class="close">&times;</span>
+  <img id="modal-img" class="modal-img">
+</div>
     </section>
-   </main>
+  
 
-   <!--footer-->
-   <footer class="page-footer">
-    <p>&copy; <span id="date">2024</span>
-    <span class="footer-logo">
-      Recipe Book </span> Built by Azra Arnautović
-    </p>
-   </footer>
-   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.4.2/zxcvbn.js"></script>
-   <script src="/java/dynamic.js"></script>
-
-</body>
-</html>
