--- a/PROJECT_I_II/html/meatballs.html
+++ b/PROJECT_I_II/html/meatballs.html
@@ -1,57 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swedish meatballs</title>
-    <link rel="shortcut icon" href="./assets/weblogo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <link rel="stylesheet" href="/css/main.css" />
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
-      <a href="index.html">
-        <img src="/assets/weblogo.png" id="navbar-brand" class="navbar-brand" alt="Website Logo">
-    </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="recipes.html">Recipes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search for a recipe" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+
   <!--main-->
   <main class="page">
 <div class="recipe-page">
     <section class="recipe-hero">
-        <img src="/assets/meatballs.webp" class="img recipe-hero-img" alt="Swedish Meatballs">
+        <img src="/assets/images/meatballs.webp" class="img recipe-hero-img" alt="Swedish Meatballs">
         <article>
             <h2>Swedish Meatballs</h2>
             <p>Swedish meatballs, a classic comfort food, are known for their savory flavor and creamy sauce. This traditional Swedish dish has gained popularity worldwide for its rich taste and simple preparation.</p>
@@ -108,13 +60,4 @@
   </section>
   </div>
     </main>
-    <!--footer-->
-    <footer class="page-footer">
-      <p>&copy; <span id="date">2024</span>
-      <span class="footer-logo">
-        Recipe Book </span> Built by Azra Arnautović
-      </p>
-     </footer>
     
-  </body>
-  </html>
