--- a/PROJECT_I_II/html/tag-template.html
+++ b/PROJECT_I_II/html/tag-template.html
@@ -1,99 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tags</title>
-    <link rel="shortcut icon" href="./assets/weblogo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-      <link rel="stylesheet" href="/css/main.css" />
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
-      <a href="index.html">
-        <img src="/assets/weblogo.png" id="navbar-brand" class="navbar-brand" alt="Website Logo">
-    </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="recipes.html">Recipes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search for a recipe" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+
   <main class="page">
     <div>
         <h4>Tags</h4>
         <!--recipes list-->
     <div class="recipes-list">
         <!--single recipe--> 
-        <a href="buns-recipe.html" class="recipe">
-        <img src="/assets/buns.webp" alt="Bread buns" class="img recipe-img"/>
+        <a href="#buns-recipe" class="recipe">
+        <img src="/assets/images/buns.webp" alt="Bread buns" class="img recipe-img"/>
         <h5>Bread buns</h5>
         <p>Prep : 35min | Cook : 15min</p>
         </a>
    
         <!--single recipe--> 
-        <a href="spaghetti.html" class="recipe">
-         <img src="/assets/pasta.jpg" alt="pasta" class="img recipe-img"/>
+        <a href="#spaghetti" class="recipe">
+         <img src="/assets/images/pasta.jpg" alt="pasta" class="img recipe-img"/>
          <h5>Spaghetti Bolognese</h5>
          <p>Prep : 15min | Cook : 30min</p>
          </a>
    
          <!--single recipe--> 
-        <a href="bananabread.html" class="recipe">
-         <img src="/assets/Bananabread.webp" alt="Banana bread" class="img recipe-img"/>
+        <a href="#bananabread" class="recipe">
+         <img src="/assets/images/Bananabread.webp" alt="Banana bread" class="img recipe-img"/>
          <h5>Banana bread</h5>
          <p>Prep : 10min | Cook : 1hr</p>
          </a>
    
          <!--single recipe--> 
-        <a href="meatballs.html" class="recipe">
-         <img src="/assets/meatballs.webp" alt="Swedish meatballs" class="img recipe-img"/>
+        <a href="#meatballs" class="recipe">
+         <img src="/assets/images/meatballs.webp" alt="Swedish meatballs" class="img recipe-img"/>
          <h5>Swedish meatballs</h5>
          <p>Prep : 15min | Cook : 30min</p>
          </a>
    
          <!--single recipe--> 
-        <a href="sushi.html" class="recipe">
-         <img src="/assets/sushi.jpg" alt="California rolls" class="img recipe-img"/>
+        <a href="#sushi" class="recipe">
+         <img src="/assets/images/sushi.jpg" alt="California rolls" class="img recipe-img"/>
          <h5>Sushi ~ California rolls</h5>
          <p>Prep : 25min | Assemble : 15min</p>
          </a>
    
          <!--single recipe--> 
-        <a href="veganbowl.html" class="recipe">
-         <img src="/assets/veganbuddhabowl.jpg" alt="Vegan bowl" class="img recipe-img"/>
+        <a href="#veganbowl" class="recipe">
+         <img src="/assets/images/veganbuddhabowl.jpg" alt="Vegan bowl" class="img recipe-img"/>
          <h5>Vegan Buddha Bowl</h5>
          <p>Prep : 20min | Cook : 15min</p>
          </a>
    
          <!--single recipe--> 
-        <a href="oatmeal.html" class="recipe">
-         <img src="/assets/oatmeal.jpg" alt="Oatmeal" class="img recipe-img"/>
+        <a href="#oatmeal" class="recipe">
+         <img src="/assets/images/oatmeal.jpg" alt="Oatmeal" class="img recipe-img"/>
          <h5>Oatmeal</h5>
          <p>Prep : 5min | Cook : 5min</p>
          </a>
@@ -101,12 +56,4 @@
        </div>
     </div>
   </main>
-  <!--footer-->
-  <footer class="page-footer">
-    <p>&copy; <span id="date">2024</span>
-    <span class="footer-logo">
-      Recipe Book </span> Built by Azra Arnautović
-    </p>
-   </footer>
-</body>
-</html>
+  
