push for this week

--- a/PROJECT_I_II/html/bananabread.html
+++ b/PROJECT_I_II/html/bananabread.html
@@ -2,9 +2,12 @@
   <!--main-->
   <main class="page">
 <div class="recipe-page">
-    <section class="recipe-hero">
-        <img src="/assets/images/Bananabread.webp" class="img recipe-hero-img" alt="Banana Bread">
-        <article>
+    <section class="recipe-hero" style=" display: flex;
+    align-items: center;">
+        <img src="/assets/images/Bananabread.webp" class="img recipe-hero-img" alt="Banana Bread" style="width: 50%; object-fit: cover;">
+        <article style="width: 50%; 
+        box-sizing: border-box;
+        padding: 0 20px;">
             <h2>Banana Bread</h2>
             <p>Banana bread is a classic and delicious way to use up ripe bananas. It's moist, flavorful, and perfect for breakfast or as a snack any time of the day.</p>
             <p>This easy banana bread recipe requires just a few simple ingredients and minimal prep time, making it a go-to option for busy bakers.</p>
