--- a/PROJECT_I_II/html/buns-recipe.html
+++ b/PROJECT_I_II/html/buns-recipe.html
@@ -1,8 +1,9 @@
 
   <main class="page">
 <div class="recipe-page">
-    <section class="recipe-hero">
-        <img src="/assets/images/buns.webp" class="img recipe-hero-img" alt="buns">
+    <section class="recipe-hero" style=" display: flex;
+    align-items: center;">
+        <img src="/assets/images/buns.webp" class="img recipe-hero-img" alt="buns" style="width: 50%; object-fit: cover;">
         <article>
             <h2>Bread Buns</h2>
             <p>Bread buns, a staple in bakeries and kitchens worldwide, are beloved for their soft texture, versatility, and comforting aroma. Originating from Europe, these delightful pastries have evolved over centuries, with each culture adding its unique twist.</p>
