--- a/PROJECT_I_II/html/about.html
+++ b/PROJECT_I_II/html/about.html
@@ -5,10 +5,8 @@
       
         <article>
           <h2>Welcome to your lifetime culinary journey!</h2><br>
-            <p>At our recipe book webpage, we believe that every dish tells a story, and every recipe shared is a gateway to a world of flavors. Embark on an adventure with us as we traverse through tantalizing tastes, aromatic spices, and mouthwatering creations.</p>
-            <p>Our cookbook is more than just a collection of recipes; it's a celebration of culture, tradition, and innovation. From classic comfort foods to daring culinary experiments, we've curated a diverse selection to suit every palate and occasion.</p>
-            <p>Whether you're a seasoned chef looking to expand your repertoire or a kitchen novice eager to explore the joys of cooking, our webpage offers something for everyone. Each recipe is meticulously crafted with detailed instructions and helpful tips, ensuring that even the most intricate dishes are within reach.</p>
-            <p>Join us in the kitchen and unleash your inner chef. Let's turn ordinary ingredients into extraordinary meals, one recipe at a time. Get ready to indulge your senses and ignite your passion for cooking with our recipe book webpage. Happy cooking!</p>
+          
+          <a href="#view_more" class="btn">View more</a>
         <a href="#contact" class="btn">Contact</a>
         </article>
         <img src="/assets/images/aboutpage.jpg" alt="cooking with love" class="img about-img">
